@@ -1,34 +1,0 @@
-<?php
-	# Mantis - a php based bugtracking system
-	# Copyright (C) 2000 - 2002  Kenzaburo Ito - kenito@300baud.org
-	# This program is distributed under the terms and conditions of the GPL
-	# See the README and LICENSE files for details
-?>
-<?php include( "core_API.php" ) ?>
-<?php login_cookie_check() ?>
-<?php
-	db_connect( $g_hostname, $g_db_username, $g_db_password, $g_database_name );
-	check_access( MANAGER );
-?>
-<?php print_page_top1() ?>
-<?php print_page_top2() ?>
-
-<p>
-<div align="center">
-	<?php print_bracket_link( $g_proj_user_menu_page, "Back" ) ?>
-</div>
-
-<p>
-<div align="center">
-	<?php print_hr( $g_hr_size, $g_hr_width ) ?>
-	<?php echo $s_remove_user_sure_msg ?>
-
-	<form method="post" action="<?php echo $g_proj_user_delete ?>">
-		<input type="hidden" name="f_user_id" value="<?php echo $f_user_id ?>">
-		<input type="submit" value="Remove User">
-	</form>
-
-	<?php print_hr( $g_hr_size, $g_hr_width ) ?>
-</div>
-
-<?php print_page_bot1( __FILE__ ) ?>
